--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/pi/.local/share/virtualenvs/booktime_django-xYJTTliW/bin/python"
+    "python.pythonPath": "C:\\Users\\alex\\.virtualenvs\\booktime_django-xFccWRuS\\Scripts\\python.exe"
 }
